fix font jp 3nd

--- a/public/css/homepage/sec7-v.css
+++ b/public/css/homepage/sec7-v.css
@@ -19,6 +19,10 @@
     color: #EFD483;
     font-size: 50px;
 }
+.header2-sec7-v-hp-jp {
+    color: #EFD483;
+    font-size: 37px;
+}
 .btn-sec7-v-hp {
     width: 15vw;
     height: 5vh;
