--- a/public/css/product-v/sec2.css
+++ b/public/css/product-v/sec2.css
@@ -14,7 +14,8 @@
     padding-top: 5.5%;
     background-position: center -10px;
     scale: 101%;
-    height: 110vh;
+    /*height: 110vh;*/
+    padding-bottom: 5%;
 }
 
 .img-sec2-product-pc {
